# rauto

./: .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  Cargo.toml  README.md  README_zh.md  build.rs  components.json  jsconfig.json  package-lock.json  package.json  vite.config.js
.githooks/: pre-commit
.github/workflows/: ci.yml  docs-pages.yml  release.yml
assets/show_catalog/: commands-mapping.toml
docs/: book.toml  manager-integration-reference.md
docs/src/: README.md  SUMMARY.md  connections-and-profiles.md  flows-and-upload.md  inventory-and-operations.md  quick-start.md  templates-and-exec.md  transactions-and-orchestration.md  web-and-agent.md
frontend/: index.html
frontend/src/: App.svelte  app.css  main.js  routes.js
frontend/tests/: command-flow-draft-state.test.js  command-flow-inline.test.js  command-flow-readonly-state.test.js  command-flow-runtime-vars.test.js  command-flow-shared-components.test.js  command-flow-template-model.test.js  connection-device-facts.test.js  connection-timeout.test.js  dashboard-shell-scroll.test.js  format-check-wiring.test.js  inventory-group-contract.test.js  modules-simplification.test.js  orchestration-action-editor-guarded-access.test.js  orchestration-command-flow-source.test.js  orchestration-flow-canvas.test.js  orchestration-form-contract.test.js  orchestration-response-contract.test.js  orchestration-source-context-loop.test.js  orchestration-template-workspace.test.js  orchestration-workflow-preview.test.js  presence-field-grid-events.test.js  profile-catalog-page.test.js  profile-panel-child-workspaces.test.js  profiles-list-state.test.js  record-drawer-state.test.js  shadcn-fragment-wrapper.test.js  shadcn-project-wiring.test.js  shadcn-theme-token.test.js  show-query-workspaces.test.js  standard-command-execution-workbench.test.js  standard-command-flow-authoring-state.test.js  standard-command-flow-authoring.test.js  standard-direct-multiline.test.js  svelte-keyed-list-state.test.js  template-manager-page.test.js  template-manager-state.test.js  templates-picker-display-state.test.js  templates-workspace-store-usage.test.js  theme-system.test.js  transaction-block-editor-layout.test.js  (+17 more)
migrations/: 202603250001_initial_schema.sql  202603270002_command_flow_templates.sql  202604060001_task_runs.sql  202604060002_task_artifacts.sql  202604070001_inventory.sql  202604090001_linux_shell_flavor.sql  202604100001_execution_json_templates.sql  202604220001_connection_enable_empty_enter.sql  202605170001_autodetect_profile_cache.sql  202606040001_custom_textfsm.sql  202606040002_custom_show_objects.sql  202607120001_connection_timeout.sql  202607210001_connection_device_facts.sql
skills/rauto-usage/: SKILL.md
src/: agent_task_grpc.rs  cli.rs  device.rs  main.rs  manager_grpc.rs  orchestrator.rs  task.rs  tx_operation.rs
src/agent/: config.rs  grpc_client.rs  mod.rs  registration.rs  report_mode.rs  task_grpc_server.rs
src/cli/: args.rs  commands.rs  exec.rs  flow.rs  json_templates.rs  ops.rs  runtime.rs  tx_block.rs  tx_workflow.rs
src/config/: autodetect_cache.rs  backup.rs  command_blacklist.rs  command_flow_template.rs  command_flow_vars.rs  connection_import.rs  connection_store.rs  mod.rs  (+18 more)
static/: api.js  app.js  connections.js  history.js  i18n.js  index.html  input.css  inventory.js  output.css  profiles.js  render.js  state.js  store.js  tasks.js  templates.js  tx.js  ui.js  utils.js
templates/: example_vars.json
(+811 files in other folders)
