[package]
name = "rauto"
version = "0.1.0"
edition = "2024"
description = "A powerful CLI tool for network device automation using minijinja templates and rneter."
license = "MIT"
authors = ["demohiiiii <demonshide@qq.com>"]
repository = "https://github.com/demohiiiii/rauto"
readme = "README.md"
keywords = ["network", "automation", "cli", "ssh", "minijinja"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
clap = { version = "4.5.23", features = ["derive", "env"] }
minijinja = { version = "2.15", features = ["loader", "json"] }
rneter = "0.1.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
toml = "0.8.23"
dirs = "5.0.1"
log = "0.4.22"
env_logger = "0.11.5"
