[package]
name = "rauto"
version = "0.1.1"
edition = "2024"
description = "A powerful CLI tool for network device automation using minijinja templates and rneter."
license = "MIT"
authors = ["demohiiiii <demonshide@qq.com>"]
repository = "https://github.com/demohiiiii/rauto"
readme = "README.md"
keywords = ["network", "automation", "cli", "ssh", "minijinja"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
clap = { version = "4.5.23", features = ["derive", "env"] }
minijinja = { version = "2.15", features = ["loader", "json"] }
rneter = "0.1.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
toml = "0.8.23"
dirs = "5.0.1"
log = "0.4.22"
axum = "0.8.1"
tower-http = { version = "0.6.2", features = ["fs"] }
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
rust-embed = "8.5.0"
mime_guess = "2.0.5"
